# event-cpi

./: .gitignore  Anchor.toml  pnpm-lock.yaml
programs/demo/: Cargo.toml
programs/demo/src/: lib.rs
programs/demo2/: Cargo.toml
programs/demo2/src/: lib.rs
programs/demo3/: Cargo.toml
programs/demo3/src/: lib.rs
tests/: demo.ts  script.ts
